Fixes for postgis install

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,15 @@ env:
 
 install:
   - pip install --use-mirrors -q Django==$DJANGO_VERSION .
-  - sudo apt-get install -q postgresql-9.1-postgis
+  - sudo apt-get install -yq postgresql-9.1-postgis
   - psql -U postgres -c 'CREATE DATABASE template_postgis;'
-  - psql -U postgres -d template_postgis -c 'CREATE LANG plpgsql;'
+  - psql -U postgres -d template_postgis -c 'CREATE LANGUAGE plpgsql;'
+  - psql -U postgres -d template_postgis -c 'CREATE EXTENSION hstore;'
   - psql -U postgres -d template_postgis -f /usr/share/postgresql/9.1/contrib/postgis.sql
   - psql -U postgres -d template_postgis -f /usr/share/postgresql/9.1/contrib/spatial_ref_sys.sql
+  - psql -U postgres -d template_postgis -c 'GRANT ALL ON geometry_columns TO PUBLIC;'
+  - psql -U postgres -d template_postgis -c 'GRANT ALL ON spatial_ref_sys TO PUBLIC;'
+  - psql -U postgres -d template_postgis -c 'GRANT ALL ON geography_columns TO PUBLIC;'
 
 before_script:
   - psql -U postgres -c 'CREATE USER geomium WITH PASSWORD ge0m1um;' -U postgres
